--- a/index.html
+++ b/index.html
@@ -7,8 +7,23 @@
   <meta name="description" content="Cada criação da Bulgari é cuidadosamente feita à mão e entregue em suas icônicas embalagens, refletindo a excelência em cada detalhe. Mais do que marcar o tempo, os relógios Bulgari são verdadeiras obras de arte.
   ">
   <link rel="stylesheet" href="/style.css">
-  <title>Document</title>
+  <title>BVLGARI</title>
 </head>
+
+<body>
+  <header class="header-bg">
+    <div class="header">
+      <a href="./"><img src="./assets/BVLGARI.svg" alt=""></a>
+      <nav aria-label="primaria">
+        <ul class="header-menu">
+          <li><a href="./relogios.htmk">Relógios</a></li>
+          <li><a href="./seguros.html">Seguros</a></li>
+          <li><a href="./contato.html">Contato</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+</body>
 
 <body>
 
