--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Cada criação da Bulgari é cuidadosamente feita à mão e entregue em suas icônicas embalagens, refletindo a excelência em cada detalhe. Mais do que marcar o tempo, os relógios Bulgari são verdadeiras obras de arte.
   ">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/style.css">
   <title>BVLGARI</title>
 </head>
@@ -23,6 +26,16 @@
       </nav>
     </div>
   </header>
+  <main class="introducao-bg">
+    <div class="introducao">
+      <div class="introducao-conteudo">
+        <h1>RELÓGIO <br>SERPENTIS</h1>
+        <p>Um símbolo de empoderamento, renovação e infinitas transformações desde os anos 1940, Serpenti é o ícone supremo de metamorfose da Bvlgari. Revelando a natureza versátil e a energia extraordinária do emblema.</p>
+        <a href="./relógios.html">Escolha o seu!</a>
+      </div>
+      <img src="./assets/relogio-logo.svg" alt="">
+    </div>
+  </main>
 </body>
 
 <body>
