--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <main class="introducao-bg">
     <div class="introducao">
       <div class="introducao-conteudo">
-        <h1>Relógio <br>Serpentis</h1>
+        <h1>Relógio <br>Serpentis<span>.</span></h1>
         <p>Um símbolo de empoderamento, renovação e infinitas transformações desde os anos 1940, Serpenti é o ícone supremo de metamorfose da Bvlgari. Revelando a natureza versátil e a energia extraordinária do emblema.</p>
         <a href="./relógios.html">Escolha o seu!</a>
       </div>
