--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       <a href="./"><img src="./assets/BVLGARI.svg" alt=""></a>
       <nav aria-label="primaria">
         <ul class="header-menu">
-          <li><a href="./relogios.htmk">Relógios</a></li>
-          <li><a href="./seguros.html">Seguros</a></li>
-          <li><a href="./contato.html">Contato</a></li>
+          <li><a class="w" href="./relogios.htmk">Relógios</a></li>
+          <li><a class="w" href="./seguros.html">Seguros</a></li>
+          <li><a class="w" href="./contato.html">Contato</a></li>
         </ul>
       </nav>
     </div>
@@ -29,9 +29,9 @@
   <main class="introducao-bg">
     <div class="introducao">
       <div class="introducao-conteudo">
-        <h1>Relógio <br>Serpentis<span>.</span></h1>
-        <p>Um símbolo de empoderamento, renovação e infinitas transformações desde os anos 1940, Serpenti é o ícone supremo de metamorfose da Bvlgari. Revelando a natureza versátil e a energia extraordinária do emblema.</p>
-        <a href="./relógios.html">Escolha o seu!</a>
+        <h1 class="w">Relógio <br>Serpentis<span class="p1">.</span></h1>
+        <p class="c4">Um símbolo de empoderamento, renovação e infinitas transformações desde os anos 1940, Serpenti é o ícone supremo de metamorfose da Bvlgari. Revelando a natureza versátil e a energia extraordinária do emblema.</p>
+        <a class="botao" href="./relógios.html">Escolha o seu!</a>
       </div>
       <img src="./assets/relogio-logo.svg" alt="">
     </div>
