--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   ">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/style.css">
   <title>BVLGARI</title>
 </head>
@@ -27,7 +27,7 @@
     </div>
   </header>
   <main class="introducao-bg">
-    <div class="introducao">
+    <div class="introducao container">
       <div class="introducao-conteudo">
         <h1 class="w font-1-xxl">Relógio <br>Serpentis<span class="p1">.</span></h1>
         <p class="c4 font-2-l">Um símbolo de empoderamento, renovação e infinitas transformações desde os anos 1940, Serpenti é o ícone supremo de metamorfose da Bvlgari. Revelando a natureza versátil e a energia extraordinária do emblema.</p>
@@ -36,6 +36,35 @@
       <img src="./assets/relogio-logo.svg" alt="">
     </div>
   </main>
+
+  <article class="relogios-lista">
+    <h2 class="font-1-xxl container">escolha o seu<span class="p1">.</span></h2>
+
+
+    <ul>
+      <li>
+        <a href="./relogios/serpenti-spiga.html">
+          <img src="/assets/serpenti-spiga.svg" alt="">
+          <h3 class="font-1-xl c11">Serpenti Spiga</h3>
+          <span class="font-2-m c8">R$ 120.000</span>
+        </a>
+      </li>
+      <li>
+        <a href="./relogios/serpenti-tubogas.html">
+          <img src="/assets/serpenti-tubogas.svg" alt="relogio-serpenti-tubogas">
+          <h3 class="font-1-xl c11">Serpenti Spiga</h3>
+          <span class="font-2-m c8">R$ 120.000</span>
+        </a>
+      </li>
+      <li>
+        <a href="./relogios/nebula-cosmic.html">
+          <img src="/assets/nebula-cosmic.svg" alt="relogio-nebula-cosmic">
+          <h3 class="font-1-xl c11">Nebula Cosmic</h3>
+          <span class="font-2-m c8">R$150.000</span>
+        </a>
+      </li>
+    </ul>
+  </article>
 </body>
 
 <body>
