--- a/index.html
+++ b/index.html
@@ -45,21 +45,21 @@
       <li>
         <a href="./relogios/serpenti-spiga.html">
           <img src="/assets/serpenti-spiga.svg" alt="">
-          <h3 class="font-1-xl c11">Serpenti Spiga</h3>
+          <h3 class="font-1-xl c11">Spiga</h3>
           <span class="font-2-m c8">R$ 120.000</span>
         </a>
       </li>
       <li>
         <a href="./relogios/serpenti-tubogas.html">
           <img src="/assets/serpenti-tubogas.svg" alt="relogio-serpenti-tubogas">
-          <h3 class="font-1-xl c11">Serpenti Spiga</h3>
+          <h3 class="font-1-xl c11">Tubogas</h3>
           <span class="font-2-m c8">R$ 120.000</span>
         </a>
       </li>
       <li>
         <a href="./relogios/nebula-cosmic.html">
           <img src="/assets/nebula-cosmic.svg" alt="relogio-nebula-cosmic">
-          <h3 class="font-1-xl c11">Nebula Cosmic</h3>
+          <h3 class="font-1-xl c11">Nebula</h3>
           <span class="font-2-m c8">R$150.000</span>
         </a>
       </li>
