--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <header class="header-bg">
-    <div class="header">
+    <div class="header container">
       <a href="./"><img src="./assets/BVLGARI.svg" alt=""></a>
       <nav aria-label="primaria">
         <ul class="header-menu">
