--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </main>
 
   <article class="relogios-lista">
-    <h2 class="font-1-xxl container">escolha o seu<span class="p1">.</span></h2>
+    <h2 class="font-1-xxl container">Escolha o seu<span class="p1">.</span></h2>
 
 
     <ul>
@@ -60,10 +60,41 @@
         <a href="./relogios/nebula-cosmic.html">
           <img src="/assets/nebula-cosmic.svg" alt="relogio-nebula-cosmic">
           <h3 class="font-1-xl c11">Nebula</h3>
-          <span class="font-2-m c8">R$150.000</span>
+          <span class="font-2-m c8">R$ 150.000</span>
         </a>
       </li>
     </ul>
+  </article>
+
+  <article class="tecnologia-bg">
+    <div class="tecnologia container">
+      <div class="tecnologia-conteudo">
+
+        <span class="font-2-l-b c5">ESTILO ATEMPORAL</span>
+        <h2 class="font-1-xxl w">Relógios feitos a mão<span class="p1">.</span></h2>
+        <p class="font-2-l c4">Cada criação da Bulgari é cuidadosamente feita à mão e entregue em suas icônicas embalagens, refletindo a excelência em cada detalhe. Mais do que marcar o tempo, os relógios Bulgari são verdadeiras obras de arte.</p>
+        <a class="link link-a" href="./relogios.html">ESCOLHA UM MODELO</a>
+
+        <div class="tecnologia-vantagens">
+          <div>
+            <img src="./icons/design.svg">
+            <h3 class="font-1-l w">Design</h3>
+            <p class="font-2-s c4">Fusão perfeita entre a sofisticação do design italiano e a excelência da alta relojoaria suíça. Fabricados com materiais de prestígio, cada peça reflete a herança de luxo e inovação da marca.</p>
+          </div>
+          <div>
+            <img src="./icons/diamond.svg">
+            <h3 class="font-1-l w">Qualidade</h3>
+            <p class="font-2-s c4">Feitos com materiais de alta qualidade, como ouro, platina, aço inoxidável e cerâmica de alta tecnologia. Esses materiais garantem sofisticação, durabilidade e um toque contemporâneo.</p>
+          </div>
+        </div>
+
+      </div>
+
+      <div class="tecnologia-img">
+        <img src="./assets/mao.png">
+      </div>
+
+    </div>
   </article>
 </body>
 
