--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
     </div>
   </main>
 
-  <article class="relogios-lista">
+  <article class="relogios-lista ">
     <h2 class="font-1-xxl container">Escolha o seu<span class="p1">.</span></h2>
 
 
-    <ul>
+    <ul class="container-vazado">
       <li>
         <a href="./relogios/serpenti-spiga.html">
           <img src="/assets/serpenti-spiga.svg" alt="">
@@ -96,6 +96,21 @@
 
     </div>
   </article>
+
+  <section class="parceiros container-vazado" aria-label="nossos parceiros">
+    <h2 class="font-1-xxl c12 container font-parceiros">Nossos parceiros<span class="p1">.</span></h2>
+
+    <ul class="parceiros-lista">
+      <li><img src="./assets/parceiros/caravan.svg" alt="caravan"></li>
+      <li><img src="./assets/parceiros/ranek.svg" alt="ranek"></li>
+      <li><img src="./assets/parceiros/handel.svg" alt="handel"></li>
+      <li><img src="./assets/parceiros/dogs.svg" alt="dogs"></li>
+      <li><img src="./assets/parceiros/lescone.svg" alt="lescone"></li>
+      <li><img src="./assets/parceiros/flexblog.svg" alt="flexblog"></li>
+      <li><img src="./assets/parceiros/wildbeast.svg" alt="wildbeast"></li>
+      <li><img src="./assets/parceiros/surfbot.svg" alt="surfbot"></li>
+    </ul>
+  </section>
 </body>
 
 <body>
