--- a/index.html
+++ b/index.html
@@ -111,6 +111,17 @@
       <li><img src="./assets/parceiros/surfbot.svg" alt="surfbot"></li>
     </ul>
   </section>
+  <section class="depoimento" aria-label="depoimento">
+    <div>
+      <img src="./assets/depoimento.png" alt="lisa-depoimento">
+    </div>
+    <div class="depoimento-conteudo">
+      <blockquote>
+        <p class="font-1-xl c12">Usar um relógio Bvlgari é carregar uma obra de arte no pulso. Cada detalhe reflete a elegância e a inovação que só a Bulgari pode oferecer. É mais do que um acessório, é uma expressão de sofisticação atemporal.</p>
+      </blockquote>
+      <span class="font-1-m-b c12">-Lisa</span>
+    </div>
+  </section>
 </body>
 
 <body>
