--- a/index.html
+++ b/index.html
@@ -122,6 +122,35 @@
       <span class="font-1-m-b c12">-Lisa</span>
     </div>
   </section>
+  <article class="seguros-bg">
+    <div class="seguros container">
+      <h2 class="font-1-xxl w">Seguros<span class="p1">.</span></h2>
+      <div class="seguros-item">
+        <h3 class="font-1-xl font-gg">PRATA</h3>
+        <span class="font-1-xl w">R$ 500<span class="font-1-xs c6">MENSAL</span></span>
+        <ul class="font-2-m w">
+          <li>Proteção contra furtos</li>
+          <li>Proteção contra perca</li>
+          <li>Suporte 08h às 18h</li>
+          <li>Cobertura nacional</li>
+        </ul>
+        <a class="botao secundario" href="./orcamento.html">Inscreva-se</a>
+      </div>
+      <div class="seguros-item">
+        <h3 class="font-1-xl font-gr">OURO</h3>
+        <span class="font-1-xl w">R$ 1000<span class="font-1-xs c6">MENSAL</span></span>
+        <ul class="font-2-m w">
+          <li>Proteção contra furtos</li>
+          <li>Proteção contra perca</li>
+          <li>Suporte 08h às 18h</li>
+          <li>Cobertura internacional</li>
+          <li>Atendimento exclusivo</li>
+          <li>Acesso a descontos</li>
+        </ul>
+        <a class="botao" href="./orcamento.html">Inscreva-se</a>
+      </div>
+    </div>
+  </article>
 </body>
 
 <body>
