--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </div>
     <div class="depoimento-conteudo">
       <blockquote>
-        <p class="font-1-xl c12">Usar um relógio Bvlgari é carregar uma obra de arte no pulso. Cada detalhe reflete a elegância e a inovação que só a Bulgari pode oferecer. É mais do que um acessório, é uma expressão de sofisticação atemporal.</p>
+        <p class="font-1-xl c12">"Usar um relógio Bvlgari é carregar uma obra de arte no pulso. Cada detalhe reflete a elegância e a inovação que só a Bulgari pode oferecer. É mais do que um acessório, é uma expressão de sofisticação atemporal."</p>
       </blockquote>
       <span class="font-1-m-b c12">-Lisa</span>
     </div>
