--- a/index.html
+++ b/index.html
@@ -151,6 +151,42 @@
       </div>
     </div>
   </article>
+
+  <footer class="footer-bg">
+    <div class="footer container">
+      <img src="/assets/BVLGARI.svg" alt="logo">
+
+      <div class="footer-contato">
+        <h3 class="font-2-l w">CONTATO</h3>
+        <ul class="font-2-m c5">
+          <li><a href="tel:+5511974249024">(11)974349024</a></li>
+          <li><a href="mailto:nathalysantossilva12@gmail.com">santossilva12@gmail.com</a></li>
+          <li>Rua Ali Perto, 55 - Ibituruna</li>
+          <li>Governador Valadares - MG</li>
+        </ul>
+        <div class="footer-redes">
+          <a href="#"><img src="/icons/insta.svg"></a>
+          <a href="#"><img src="/icons/yt.svg"></a>
+          <a href="#"><img src="/icons/fb.svg"></a>
+        </div>
+      </div>
+
+      <div class="footer-informacoes">
+        <h3 class="font-2-l w">INFORMAÇÕES</h3>
+        <nav>
+          <ul class="font-2-m c5">
+            <li><a href="relogios.html">Relógios</a></li>
+            <li><a href="seguros.html">Seguros</a></li>
+            <li><a href="contato.html">Contato</a></li>
+            <li><a href="termos.html">Termos e condições</a></li>
+          </ul>
+        </nav>
+      </div>
+
+      <p class="footer-copy font-2-m c6">Bvlgari © Alguns direitos reservados.</p>
+    </div>
+  </footer>
+
 </body>
 
 <body>
