--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <p class="c4 font-2-l">Um símbolo de empoderamento, renovação e infinitas transformações desde os anos 1940, Serpenti é o ícone supremo de metamorfose da Bvlgari. Revelando a natureza versátil e a energia extraordinária do emblema.</p>
         <a class="botao" href="./relógios.html">Escolha o seu!</a>
       </div>
-      <img src="./assets/relogio-logo.svg" alt="">
+      <img src="./assets/relogio.png">
     </div>
   </main>
 
@@ -43,24 +43,24 @@
 
     <ul class="container-vazado">
       <li>
-        <a href="./relogios/serpenti-spiga.html">
-          <img src="/assets/serpenti-spiga.svg" alt="">
-          <h3 class="font-1-xl c11">Spiga</h3>
-          <span class="font-2-m c8">R$ 120.000</span>
-        </a>
-      </li>
-      <li>
         <a href="./relogios/serpenti-tubogas.html">
-          <img src="/assets/serpenti-tubogas.svg" alt="relogio-serpenti-tubogas">
+          <img src="/assets/serpenti-tubogas.png" alt="">
           <h3 class="font-1-xl c11">Tubogas</h3>
-          <span class="font-2-m c8">R$ 120.000</span>
+          <span class="font-2-m c8">R$ 500.000</span>
         </a>
       </li>
       <li>
-        <a href="./relogios/nebula-cosmic.html">
-          <img src="/assets/nebula-cosmic.svg" alt="relogio-nebula-cosmic">
-          <h3 class="font-1-xl c11">Nebula</h3>
-          <span class="font-2-m c8">R$ 150.000</span>
+        <a href="./relogios/serpenti-spiga.html">
+          <img src="/assets/serpenti-spiga.png" alt="relogio-serpenti-tubogas">
+          <h3 class="font-1-xl c11">Spiga</h3>
+          <span class="font-2-m c8">R$ 550.000</span>
+        </a>
+      </li>
+      <li>
+        <a href="./relogios/nebula-diamond.html">
+          <img src="/assets/serpenti-diamond.png" alt="relogio-nebula-cosmic">
+          <h3 class="font-1-xl c11">Diamond</h3>
+          <span class="font-2-m c8">R$ 700.000</span>
         </a>
       </li>
     </ul>
