--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
         </a>
       </li>
       <li>
+        <a href="./relogios/serpenti-shine.html">
+          <img src="/assets/serpenti-shine.png" alt="relogio-shine">
+          <h3 class="font-1-xl c11">Shine</h3>
+          <span class="font-2-m c8">R$ 100.000</span>
+        </a>
+      </li>
+      <li>
         <a href="./relogios/serpenti-spiga.html">
           <img src="/assets/serpenti-spiga.png" alt="relogio-serpenti-tubogas">
           <h3 class="font-1-xl c11">Spiga</h3>
@@ -57,12 +64,13 @@
         </a>
       </li>
       <li>
-        <a href="./relogios/nebula-diamond.html">
-          <img src="/assets/serpenti-diamond.png" alt="relogio-nebula-cosmic">
+        <a href="./relogios/serpenti-diamond.html">
+          <img src="/assets/serpenti-diamond.png" alt="relogio-diamond">
           <h3 class="font-1-xl c11">Diamond</h3>
           <span class="font-2-m c8">R$ 700.000</span>
         </a>
       </li>
+
     </ul>
   </article>
 
