--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 <body>
   <header class="header-bg">
     <div class="header container">
-      <a href="./"><img src="./assets/BVLGARI.svg" alt=""></a>
+      <a href="#"><img src="./assets/BVLGARI.svg" alt=""></a>
       <nav aria-label="primaria">
         <ul class="header-menu">
-          <li><a class="w font-1-m" href="./relogios.htmk">Relógios</a></li>
+          <li><a class="w font-1-m" href="./relogios.html">Relógios</a></li>
           <li><a class="w font-1-m" href="./seguros.html">Seguros</a></li>
           <li><a class="w font-1-m" href="./contato.html">Contato</a></li>
         </ul>
