--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="introducao-conteudo">
         <h1 class="w font-1-xxl">Relógio <br>Serpentis<span class="p1">.</span></h1>
         <p class="c4 font-2-l">Um símbolo de empoderamento, renovação e infinitas transformações desde os anos 1940, Serpenti é o ícone supremo de metamorfose da Bvlgari. Revelando a natureza versátil e a energia extraordinária do emblema.</p>
-        <a class="botao" href="./relógios.html">Escolha o seu!</a>
+        <a class="botao" href="./relogios.html">Escolha o seu!</a>
       </div>
       <img src="./assets/relogio.png">
     </div>
@@ -46,7 +46,7 @@
         <a href="./relogios/serpenti-tubogas.html">
           <img src="/assets/serpenti-tubogas.png" alt="">
           <h3 class="font-1-xl c11">Tubogas</h3>
-          <span class="font-2-m c8">R$ 500.000</span>
+          <span class="font-2-m c8">R$ 550.000</span>
         </a>
       </li>
       <li>
@@ -60,7 +60,7 @@
         <a href="./relogios/serpenti-spiga.html">
           <img src="/assets/serpenti-spiga.png" alt="relogio-serpenti-tubogas">
           <h3 class="font-1-xl c11">Spiga</h3>
-          <span class="font-2-m c8">R$ 550.000</span>
+          <span class="font-2-m c8">R$ 500.000</span>
         </a>
       </li>
       <li>
@@ -68,6 +68,13 @@
           <img src="/assets/serpenti-diamond.png" alt="relogio-diamond">
           <h3 class="font-1-xl c11">Diamond</h3>
           <span class="font-2-m c8">R$ 700.000</span>
+        </a>
+      </li>
+      <li>
+        <a href="./relogios/serpenti-classic.html">
+          <img src="/assets/serpenti-classic.png" alt="relogio-seduttori">
+          <h3 class="font-1-xl c11">Classic</h3>
+          <span class="font-2-m c8">R$ 400.000</span>
         </a>
       </li>
 
@@ -127,7 +134,7 @@
       <blockquote>
         <p class="font-1-xl c12">"Usar um relógio Bvlgari é carregar uma obra de arte no pulso. Cada detalhe reflete a elegância e a inovação que só a Bulgari pode oferecer. É mais do que um acessório, é uma expressão de sofisticação atemporal."</p>
       </blockquote>
-      <span class="font-1-m-b c12">-Lisa</span>
+      <span class="font-1-m-b c12">-Lisa Manoban</span>
     </div>
   </section>
   <article class="seguros-bg">
