--- a/relogios.html
+++ b/relogios.html
@@ -12,7 +12,7 @@
   <title> Relógios | BVLGARI</title>
 </head>
 
-<body>
+<body id="relogios">
   <header class="header-bg">
     <div class="header container">
       <a href="./"><img src="./assets/BVLGARI.svg" alt=""></a>
@@ -25,59 +25,172 @@
       </nav>
     </div>
   </header>
-  <main>
+
+
+  <main class="relogios-main">
     <div class="titulo-bg">
       <div class="titulo container">
         <p class="font-2-l-b c5">Escolha o seu relógio</p>
         <h1 class="font-1-xxl w">Nossos relógios<span class="p1">.</span></h1>
       </div>
     </div>
-    <div class="termos container">
-      <h2 class="font-1-l c9">1. Ordens</h2>
-      <p class="font-2-s c10">1.1. Apenas maiores de idade com capacidade legal podem fazer pedidos no site da Bvlgari, sujeitos à aceitação escrita.</p>
-      <p class="font-2-s c10">1.2. Após a confirmação do pedido, ele será processado e um e-mail de confirmação será enviado, mas isso não significa aceitação.</p>
-      <p class="font-2-s c10">1.3. A Bvlgari pode exigir confirmação verbal e cancelar pedidos em caso de violação de termos ou suspeita de fraude.</p>
-      <p class="font-2-s c10">1.4. A cor e o estilo dos produtos no site podem variar ligeiramente por razões técnicas.</p>
-
-      <h2 class="font-1-l c9">2. Confirmação de pedidos</h2>
-      <p class="font-2-s c10">2.1. O pedido é confirmado quando você clica no botão "Confirmar o pedido" após revisar as informações fornecidas.</p>
-      <p class="font-2-s c10">2.2. O contrato de compra se forma somente após o envio da "Confirmação da Ordem", confirmando o despacho dos produtos.</p>
-      <p class="font-2-s c10">2.3. É possível cancelar o pedido a qualquer momento antes do envio da "Confirmação da Ordem".</p>
-      <p class="font-2-s c10">2.4. A Bvlgari arquiva registros de todas as transações, e esses dados são tratados como prova em caso de disputa.</p>
-
-      <h2 class="font-1-l c9">3. Disponibilidade</h2>
-      <p class="font-2-s c10">3.1. A Bvlgari pode alterar a disponibilidade de produtos sem aviso prévio e não é responsável por produtos esgotados.</p>
-      <p class="font-2-s c10">3.2. Se um produto ficar indisponível após a confirmação do pedido, você será informado para escolher outro ou cancelar.</p>
-      <p class="font-2-s c10">3.3. Em pedidos múltiplos, você será informado sobre quais produtos estão disponíveis e poderá revisar o pedido.</p>
-
-      <h2 class="font-1-l c9">4. Pré-vendas</h2>
-      <p class="font-2-s c10">4.1. Produtos em pré-venda seguem os mesmos termos das vendas padrão, mas devem ser pedidos separadamente de produtos em estoque.</p>
-      <p class="font-2-s c10">4.2. O pagamento é debitado no momento da compra, e você receberá uma confirmação quando o produto for despachado.</p>
-      <p class="font-2-s c10">4.3. A Bvlgari pode cancelar total ou parcialmente uma pré-venda e reembolsar o valor pago.</p>
-
-      <h2 class="font-1-l c9">5. Preços e pagamentos</h2>
-      <p class="font-2-s c10">5.1. Os preços são exibidos em BRL, incluindo impostos e custos de transporte, e podem ser alterados sem aviso prévio.</p>
-      <p class="font-2-s c10">5.2. O pagamento é feito no momento da confirmação do pedido, mas o débito só ocorre no despacho do produto.</p>
-      <p class="font-2-s c10">5.3. Pagamentos podem ser feitos com cartões de crédito Visa, Mastercard, American Express ou Elo, com parcelamento sem juros.</p>
-      <p class="font-2-s c10">5.4. As informações do cartão de crédito não são armazenadas pela Bvlgari, e o limite disponível deve cobrir o valor total da compra.</p>
-
-      <h2 class="font-1-l c9">6. Reserva de título e risco</h2>
-      <p class="font-2-s c10">6.1. O título dos produtos permanece com a Bvlgari até o pagamento integral, e os riscos passam para o cliente após a entrega.</p>
-
-      <h2 class="font-1-l c9">7. Zona de entrega</h2>
-      <p class="font-2-s c10">7.1. A Bvlgari entrega produtos apenas no Brasil, e o endereço de entrega deve ser inserido corretamente no momento do pedido.</p>
-      <p class="font-2-s c10">7.2. Caixas de correio não são aceitas como endereço de entrega, e a assinatura do cliente é necessária no recebimento.</p>
-
-      <h2 class="font-1-l c9">8. Transporte</h2>
-      <p class="font-2-s c10">8.1. Pedidos são enviados em até sete dias úteis após a confirmação, com entrega gratuita para todos os pedidos no Brasil.</p>
-      <p class="font-2-s c10">8.2. A entrega pode demorar mais durante períodos de festas ou por motivos relacionados à pandemia de COVID-19.</p>
-
-      <h2 class="font-1-l c9">9. Política de retorno</h2>
-      <p class="font-2-s c10">9.1. Produtos não personalizados podem ser devolvidos para reembolso em até 14 dias, ou para troca em até 30 dias após a entrega.</p>
-      <p class="font-2-s c10">9.2. A devolução deve incluir o recibo de venda original e estar na embalagem original, sujeita a inspeção de garantia de qualidade.</p>
-      <p class="font-2-s c10">9.3. Produtos devolvidos ou trocados na boutique Bvlgari em São Paulo seguem os mesmos prazos e condições do site.</p>
+    <div class="relogio container">
+      <div class="relogios-img">
+        <img src="./assets/relogios/spiga.png">
+      </div>
+      <div class="relogio-conteudo">
+        <h2 class="font-1-xl c11">Serpenti Spiga - R$ 500.000</h2>
+        <p class="font-2-s c8">Relógio Serpenti Tubogas de duas voltas em ouro rosa 18K cravejado com diamantes e mostrador completamente cravejado com pavê de diamantes. Resistente à água até 30 metros</p>
+        <ul class="font-1-m c8">
+          <li>
+            <img src="./icons/relogio.svg">
+            <span>Material: Ouro rosa</span>
+          </li>
+          <li>
+            <img src="./icons/diamond.svg">
+            <span>Pedra: Diamantes</span>
+          </li>
+          <li>
+            <img src="./icons/agua.svg">
+            <span>Resistente a água</span>
+          </li>
+          <li>
+            <img src="./icons/made.svg">
+            <span>Feito na Suiça</span>
+          </li>
+        </ul>
+        <a href="./relogios/serpenti-tubogas.html" class="botao">MAIS SOBRE</a>
+      </div>
     </div>
+
+    <div class="relogio-bg">
+      <div class="relogio container">
+        <div class="relogios-img">
+          <img src="./assets/relogios/spiga.png">
+        </div>
+        <div class="relogio-conteudo">
+          <h2 class="font-1-xl w">Serpenti Spiga - R$ 500.000</h2>
+          <p class="font-2-s c5">Relógio Serpenti Tubogas de duas voltas em ouro rosa 18K cravejado com diamantes e mostrador completamente cravejado com pavê de diamantes. Resistente à água até 30 metros</p>
+          <ul class="font-1-m c5">
+            <li>
+              <img src="./icons/relogio.svg">
+              <span>Material: Ouro rosa</span>
+            </li>
+            <li>
+              <img src="./icons/diamond.svg">
+              <span>Pedra: Diamantes</span>
+            </li>
+            <li>
+              <img src="./icons/agua.svg">
+              <span>Resistente a água</span>
+            </li>
+            <li>
+              <img src="./icons/made.svg">
+              <span>Feito na Suiça</span>
+            </li>
+          </ul>
+          <a href="./relogios/serpenti-shine.html" class="botao">MAIS SOBRE</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="relogio container">
+      <div class="relogios-img">
+        <img src="./assets/relogios/spiga.png">
+      </div>
+      <div class="relogio-conteudo">
+        <h2 class="font-1-xl c11">Serpenti Spiga - R$ 500.000</h2>
+        <p class="font-2-s c8">Relógio Serpenti Tubogas de duas voltas em ouro rosa 18K cravejado com diamantes e mostrador completamente cravejado com pavê de diamantes. Resistente à água até 30 metros</p>
+        <ul class="font-1-m c8">
+          <li>
+            <img src="./icons/relogio.svg">
+            <span>Material: Ouro rosa</span>
+          </li>
+          <li>
+            <img src="./icons/diamond.svg">
+            <span>Pedra: Diamantes</span>
+          </li>
+          <li>
+            <img src="./icons/agua.svg">
+            <span>Resistente a água</span>
+          </li>
+          <li>
+            <img src="./icons/made.svg">
+            <span>Feito na Suiça</span>
+          </li>
+        </ul>
+        <a href="./relogios/serpenti-spiga.html" class="botao">MAIS SOBRE</a>
+      </div>
+    </div>
+
+    <div class="relogio-bg">
+      <div class="relogio container">
+        <div class="relogios-img">
+          <img src="./assets/relogios/spiga.png">
+        </div>
+        <div class="relogio-conteudo">
+          <h2 class="font-1-xl w">Serpenti Spiga - R$ 500.000</h2>
+          <p class="font-2-s c5">Relógio Serpenti Tubogas de duas voltas em ouro rosa 18K cravejado com diamantes e mostrador completamente cravejado com pavê de diamantes. Resistente à água até 30 metros</p>
+          <ul class="font-1-m c5">
+            <li>
+              <img src="./icons/relogio.svg">
+              <span>Material: Ouro rosa</span>
+            </li>
+            <li>
+              <img src="./icons/diamond.svg">
+              <span>Pedra: Diamantes</span>
+            </li>
+            <li>
+              <img src="./icons/agua.svg">
+              <span>Resistente a água</span>
+            </li>
+            <li>
+              <img src="./icons/made.svg">
+              <span>Feito na Suiça</span>
+            </li>
+          </ul>
+          <a href="./relogios/serpenti-diamond.html" class="botao">MAIS SOBRE</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="relogio container">
+      <div class="relogios-img">
+        <img src="./assets/relogios/spiga.png">
+      </div>
+      <div class="relogio-conteudo">
+        <h2 class="font-1-xl c11">Serpenti Spiga - R$ 500.000</h2>
+        <p class="font-2-s c8">Relógio Serpenti Tubogas de duas voltas em ouro rosa 18K cravejado com diamantes e mostrador completamente cravejado com pavê de diamantes. Resistente à água até 30 metros</p>
+
+        <ul class="font-1-m c8">
+          <li>
+            <img src="./icons/relogio.svg">
+            <span>Material: Ouro rosa</span>
+          </li>
+          <li>
+            <img src="./icons/diamond.svg">
+            <span>Pedra: Diamantes</span>
+          </li>
+          <li>
+            <img src="./icons/agua.svg">
+            <span>Resistente a água</span>
+          </li>
+          <li>
+            <img src="./icons/made.svg">
+            <span>Feito na Suiça</span>
+          </li>
+        </ul>
+
+        <a href="./relogios/serpenti-classic.html" class="botao">MAIS SOBRE</a>
+      </div>
+    </div>
+
   </main>
+
+
+
+
+
 
   <footer class="footer-bg">
     <div class="footer container">
