--- a/termos.html
+++ b/termos.html
@@ -12,13 +12,13 @@
   <title>Termos e condições | BVLGARI</title>
 </head>
 
-<body>
+<body id="termos">
   <header class="header-bg">
     <div class="header container">
       <a href="./"><img src="./assets/BVLGARI.svg" alt=""></a>
       <nav aria-label="primaria">
         <ul class="header-menu">
-          <li><a class="w font-1-m" href="./relogios.htmk">Relógios</a></li>
+          <li><a class="w font-1-m" href="./relogios.html">Relógios</a></li>
           <li><a class="w font-1-m" href="./seguros.html">Seguros</a></li>
           <li><a class="w font-1-m" href="./contato.html">Contato</a></li>
         </ul>
@@ -32,50 +32,50 @@
         <h1 class="font-1-xxl w">Termos e condições<span class="p1">.</span></h1>
       </div>
     </div>
-    <div class="termos container">
+    <div class="termos container font-2-s c10">
       <h2 class="font-1-l c9">1. Ordens</h2>
-      <p class="font-2-s c10">1.1. Apenas maiores de idade com capacidade legal podem fazer pedidos no site da Bvlgari, sujeitos à aceitação escrita.</p>
-      <p class="font-2-s c10">1.2. Após a confirmação do pedido, ele será processado e um e-mail de confirmação será enviado, mas isso não significa aceitação.</p>
-      <p class="font-2-s c10">1.3. A Bvlgari pode exigir confirmação verbal e cancelar pedidos em caso de violação de termos ou suspeita de fraude.</p>
-      <p class="font-2-s c10">1.4. A cor e o estilo dos produtos no site podem variar ligeiramente por razões técnicas.</p>
+      <p>1.1. Apenas maiores de idade com capacidade legal podem fazer pedidos no site da Bvlgari, sujeitos à aceitação escrita.</p>
+      <p>1.2. Após a confirmação do pedido, ele será processado e um e-mail de confirmação será enviado, mas isso não significa aceitação.</p>
+      <p>1.3. A Bvlgari pode exigir confirmação verbal e cancelar pedidos em caso de violação de termos ou suspeita de fraude.</p>
+      <p>1.4. A cor e o estilo dos produtos no site podem variar ligeiramente por razões técnicas.</p>
 
       <h2 class="font-1-l c9">2. Confirmação de pedidos</h2>
-      <p class="font-2-s c10">2.1. O pedido é confirmado quando você clica no botão "Confirmar o pedido" após revisar as informações fornecidas.</p>
-      <p class="font-2-s c10">2.2. O contrato de compra se forma somente após o envio da "Confirmação da Ordem", confirmando o despacho dos produtos.</p>
-      <p class="font-2-s c10">2.3. É possível cancelar o pedido a qualquer momento antes do envio da "Confirmação da Ordem".</p>
-      <p class="font-2-s c10">2.4. A Bvlgari arquiva registros de todas as transações, e esses dados são tratados como prova em caso de disputa.</p>
+      <p>2.1. O pedido é confirmado quando você clica no botão "Confirmar o pedido" após revisar as informações fornecidas.</p>
+      <p>2.2. O contrato de compra se forma somente após o envio da "Confirmação da Ordem", confirmando o despacho dos produtos.</p>
+      <p>2.3. É possível cancelar o pedido a qualquer momento antes do envio da "Confirmação da Ordem".</p>
+      <p>2.4. A Bvlgari arquiva registros de todas as transações, e esses dados são tratados como prova em caso de disputa.</p>
 
       <h2 class="font-1-l c9">3. Disponibilidade</h2>
-      <p class="font-2-s c10">3.1. A Bvlgari pode alterar a disponibilidade de produtos sem aviso prévio e não é responsável por produtos esgotados.</p>
-      <p class="font-2-s c10">3.2. Se um produto ficar indisponível após a confirmação do pedido, você será informado para escolher outro ou cancelar.</p>
-      <p class="font-2-s c10">3.3. Em pedidos múltiplos, você será informado sobre quais produtos estão disponíveis e poderá revisar o pedido.</p>
+      <p>3.1. A Bvlgari pode alterar a disponibilidade de produtos sem aviso prévio e não é responsável por produtos esgotados.</p>
+      <p>3.2. Se um produto ficar indisponível após a confirmação do pedido, você será informado para escolher outro ou cancelar.</p>
+      <p>3.3. Em pedidos múltiplos, você será informado sobre quais produtos estão disponíveis e poderá revisar o pedido.</p>
 
       <h2 class="font-1-l c9">4. Pré-vendas</h2>
-      <p class="font-2-s c10">4.1. Produtos em pré-venda seguem os mesmos termos das vendas padrão, mas devem ser pedidos separadamente de produtos em estoque.</p>
-      <p class="font-2-s c10">4.2. O pagamento é debitado no momento da compra, e você receberá uma confirmação quando o produto for despachado.</p>
-      <p class="font-2-s c10">4.3. A Bvlgari pode cancelar total ou parcialmente uma pré-venda e reembolsar o valor pago.</p>
+      <p>4.1. Produtos em pré-venda seguem os mesmos termos das vendas padrão, mas devem ser pedidos separadamente de produtos em estoque.</p>
+      <p>4.2. O pagamento é debitado no momento da compra, e você receberá uma confirmação quando o produto for despachado.</p>
+      <p>4.3. A Bvlgari pode cancelar total ou parcialmente uma pré-venda e reembolsar o valor pago.</p>
 
       <h2 class="font-1-l c9">5. Preços e pagamentos</h2>
-      <p class="font-2-s c10">5.1. Os preços são exibidos em BRL, incluindo impostos e custos de transporte, e podem ser alterados sem aviso prévio.</p>
-      <p class="font-2-s c10">5.2. O pagamento é feito no momento da confirmação do pedido, mas o débito só ocorre no despacho do produto.</p>
-      <p class="font-2-s c10">5.3. Pagamentos podem ser feitos com cartões de crédito Visa, Mastercard, American Express ou Elo, com parcelamento sem juros.</p>
-      <p class="font-2-s c10">5.4. As informações do cartão de crédito não são armazenadas pela Bvlgari, e o limite disponível deve cobrir o valor total da compra.</p>
+      <p>5.1. Os preços são exibidos em BRL, incluindo impostos e custos de transporte, e podem ser alterados sem aviso prévio.</p>
+      <p>5.2. O pagamento é feito no momento da confirmação do pedido, mas o débito só ocorre no despacho do produto.</p>
+      <p>5.3. Pagamentos podem ser feitos com cartões de crédito Visa, Mastercard, American Express ou Elo, com parcelamento sem juros.</p>
+      <p>5.4. As informações do cartão de crédito não são armazenadas pela Bvlgari, e o limite disponível deve cobrir o valor total da compra.</p>
 
       <h2 class="font-1-l c9">6. Reserva de título e risco</h2>
-      <p class="font-2-s c10">6.1. O título dos produtos permanece com a Bvlgari até o pagamento integral, e os riscos passam para o cliente após a entrega.</p>
+      <p>6.1. O título dos produtos permanece com a Bvlgari até o pagamento integral, e os riscos passam para o cliente após a entrega.</p>
 
       <h2 class="font-1-l c9">7. Zona de entrega</h2>
-      <p class="font-2-s c10">7.1. A Bvlgari entrega produtos apenas no Brasil, e o endereço de entrega deve ser inserido corretamente no momento do pedido.</p>
-      <p class="font-2-s c10">7.2. Caixas de correio não são aceitas como endereço de entrega, e a assinatura do cliente é necessária no recebimento.</p>
+      <p>7.1. A Bvlgari entrega produtos apenas no Brasil, e o endereço de entrega deve ser inserido corretamente no momento do pedido.</p>
+      <p>7.2. Caixas de correio não são aceitas como endereço de entrega, e a assinatura do cliente é necessária no recebimento.</p>
 
       <h2 class="font-1-l c9">8. Transporte</h2>
-      <p class="font-2-s c10">8.1. Pedidos são enviados em até sete dias úteis após a confirmação, com entrega gratuita para todos os pedidos no Brasil.</p>
-      <p class="font-2-s c10">8.2. A entrega pode demorar mais durante períodos de festas ou por motivos relacionados à pandemia de COVID-19.</p>
+      <p>8.1. Pedidos são enviados em até sete dias úteis após a confirmação, com entrega gratuita para todos os pedidos no Brasil.</p>
+      <p>8.2. A entrega pode demorar mais durante períodos de festas ou por motivos relacionados à pandemia de COVID-19.</p>
 
       <h2 class="font-1-l c9">9. Política de retorno</h2>
-      <p class="font-2-s c10">9.1. Produtos não personalizados podem ser devolvidos para reembolso em até 14 dias, ou para troca em até 30 dias após a entrega.</p>
-      <p class="font-2-s c10">9.2. A devolução deve incluir o recibo de venda original e estar na embalagem original, sujeita a inspeção de garantia de qualidade.</p>
-      <p class="font-2-s c10">9.3. Produtos devolvidos ou trocados na boutique Bvlgari em São Paulo seguem os mesmos prazos e condições do site.</p>
+      <p>9.1. Produtos não personalizados podem ser devolvidos para reembolso em até 14 dias, ou para troca em até 30 dias após a entrega.</p>
+      <p>9.2. A devolução deve incluir o recibo de venda original e estar na embalagem original, sujeita a inspeção de garantia de qualidade.</p>
+      <p>9.3. Produtos devolvidos ou trocados na boutique Bvlgari em São Paulo seguem os mesmos prazos e condições do site.</p>
     </div>
   </main>
 
